Added Draining Root test case

--- a/TreeRoot_Time_solver/Makefile
+++ b/TreeRoot_Time_solver/Makefile
@@ -20,6 +20,7 @@ all: library
 	$(MAKE) -C src/3_Complex_Network
 	$(MAKE) -C src/4_Initial_P0
 	$(MAKE) -C src/5_Init_No_Root
+	$(MAKE) -C src/6_Draining_Root
 
 help:
 	@echo "make all: build the library and complile the test case"
@@ -47,6 +48,7 @@ clean:
 	$(MAKE) -C src/3_Complex_Network clean
 	$(MAKE) -C src/4_Initial_P0 clean
 	$(MAKE) -C src/5_Init_No_Root clean
+	$(MAKE) -C src/6_Draining_Root clean
 
 distclean: clean
 	$(MAKE) -C include distclean
@@ -55,6 +57,7 @@ distclean: clean
 	$(MAKE) -C src/3_Complex_Network distclean
 	$(MAKE) -C src/4_Initial_P0 distclean
 	$(MAKE) -C src/5_Init_No_Root distclean
+	$(MAKE) -C src/6_Draining_Root distclean
 
 fast:	
 	$(MAKE) -C include fastclean
