--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,12 +1,9 @@
 # Project Path (this file path)
-#PROJECT_DIR = /u/raimondi/Tree_root_Project
-PROJECT_DIR = /media/More_SPACE/Tree_root_Project
+PROJECT_DIR = /u/raimondi/Tree_root_Project
 # Path to GetFEM library
-#GETFEM_LIB_DIR     = $(mkGetfemLib)
-GETFEM_LIB_DIR     = /opt/getfem/lib
+GETFEM_LIB_DIR     = $(mkGetfemLib)
 # Path to GetFEM includes
-#GETFEM_INC_DIR     = $(mkGetfemInc)
-GETFEM_INC_DIR     = /opt/getfem/include
+GETFEM_INC_DIR     = $(mkGetfemInc)
 
 
 
